<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.InscricaoEventoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ToolbarColoredBackArrow"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/colorWhite" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtIENomeEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/nome_evento"
                android:textAlignment="center"
                android:textColor="@color/colorButtonGreen"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtIECidadeEData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/cidade_dd_mm_yyyy"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtIELocalEHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/local_hh_mm"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtIEQtdVagas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/total_de_vagas_xx"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtIENome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/ie_nome"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtIENome"
                android:digits="aáâãbcçdeéêefghiíîjklmnoóôõpqrstuúûvwxyzAÁÂÃBCÇDEÉÊFGHIÍÎJKLMNOÓÔÕPQRSTUÚÛVWXYZ "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ie_digite_nome"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtIEEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/ie_email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtIEEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ie_digite_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txtIETelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/ie_telefone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtIETelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ie_digite_telefone"
                android:inputType="number" />

            <Switch
                android:id="@+id/swIEConhecimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/ie_conhecimento"
                android:textColorLink="#D81B60"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnIECadastrar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorButtonGreen"
                android:drawableLeft="@drawable/baseline_check_white_24dp"
                android:text="@string/ie_inscrever_me"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>