<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.EditarEventoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ToolbarColoredBackArrow"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/colorWhite" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtEENomeEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/nome_evento"
                android:textAlignment="viewStart"
                android:textColor="@color/colorButtonGreen"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEECidadeEData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/cidade_dd_mm_yyyy"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtEELocalEHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/local_hh_mm"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtEEQtdVagas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/total_de_vagas_xx"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtEEEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:text="@string/editar_nome" />

            <EditText
                android:id="@+id/edtEEEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ee_nome_do_evento"
                android:maxLength="18"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtEECidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/ee_cidade" />

            <Spinner
                android:id="@+id/spnEECidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp" />

            <!--<EditText-->
                <!--android:id="@+id/edtEECidade"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:ems="10"-->
                <!--android:hint="@string/ee_cidade_do_evento"-->
                <!--android:inputType="textPersonName" />-->

            <TextView
                android:id="@+id/txtEELocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/ee_local" />

            <EditText
                android:id="@+id/edtEELocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ee_local_do_evento"
                android:maxLength="18"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtEEData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/ee_data" />

            <TextView
                android:id="@+id/txtEEDataPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/ee_data_do_evento"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="14dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txtEEHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/ee_horario" />

            <TextView
                android:id="@+id/txtEEHoraPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/ee_horario_do_evento"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="14dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txtEEVagas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/ee_vagas" />

            <EditText
                android:id="@+id/edtEEVagas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/ee_total_de_vagas"
                android:maxLength="4"
                android:inputType="number" />

            <LinearLayout
                android:id="@+id/EELinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEECancelar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorButtonRed"
                    android:drawableStart="@drawable/baseline_close_white_24dp"
                    android:text="@string/cancelar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnEEEditar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorButtonGreen"
                    android:drawableStart="@drawable/baseline_check_white_24dp"
                    android:text="@string/editar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnEEDeletarEvento"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGray"
                android:drawableStart="@drawable/baseline_delete_white_24dp"
                android:text="@string/deletar_evento"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>